# new_coin

./: config.yaml  originalcoin.py
OneDrive/Desktop/network/: .env  CMakeLists.txt  blockchain_cpp.pyd  cmake.txt  config.json  gui.py  key.pem  key.salt  main.py  requirements-linux.txt  requirements-mac.txt  requirements-windows.txt  server.crt  server.key  setup.py  utils.py  utxo_cpp.pyd
OneDrive/Desktop/network/cpp_extensions/: blockchain_cpp.cpp  utxo_cpp.cpp
OneDrive/Desktop/network/key_rotation/: api.py  core.py  main.py
OneDrive/Desktop/network/network/: __init__.py  api.py  core.py  p2p.py
OneDrive/Desktop/network/security/: __init__.py  backup.py  mfa.py  monitor.py
new_coin/: .env  Dockerfile.dockerfile  audit_performance.ps1  blockchain.py  cert.pem  chain.db  config.yaml  docker-compose.yml  finalize.json  gui.py  known_peers.txt  main.py  network.py  requirements.txt  server.crt  server.key  utils.py  vote.json  wallets.json
new_coin/key_rotation/: api.py  core.py  main.py
new_coin/tests/: test_blockchain.py
originalcoin/: .env  Dockerfile  cert.pem  config.yaml  docker-compose.yml  key.pem  originalcoin.py  requirements.txt
